fix logs on high contrast, fix pagination not aligning, fix margins on ""mobile"" view

--- a/src/App.scss
+++ b/src/App.scss
@@ -751,7 +751,7 @@ a:hover {
     max-width: 1024px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 100px;
+    margin-top: 20px;
     padding-bottom: 50px;
   }
   .bottomModalPart {
